
Features
--------
	See the web site for a list of features.

Explanations
------------
	- If operations aren't shown for classes, use -x c++ for Clang.
	- If float.h is or intrinics are missing, make sure clang dir is under exec dir (bin).
	- If classes aren't showing relation to std::vector<>, use "-x c++" for Clang.
	- Analysis will run again if there are include path errors
	  (changing switches or files will rerun)
	- If editor doesn't go to many defs, make sure include paths are correct
	  for analysis.
	- NewNameDisplayStar name not shown in displayOtherThoughts sequence.
	  The typedef where the function is defined is shown.
	- Function body variables display const symbols by design.
	  See OovClassRelations.html.
	- If the error "undeclared identifier __builtin_ia32_bsrsi" displays,
	  this means that the clang headers are not found or the libclang.dll
	  version is different and not searching the same way. Windows libclang
	  3.6 allowed the clang library includes to be under bin, but 3.7 requires
	  ..\lib. The depends.exe shows that oovCppParser finds libclang.dll in bin
	  directory.
	- If the error, "Never use <adxintrin.h> directly", displays, the
	  Oovaide project must be set to exclude lib dir for analysis.

Code/Design Guidelines
-----------
	- Error handling strategy - See OovError.h, OovStatus class.
	- OovCommon is a shared library between many components
	- OovGuiCommon is only used for GUI (GTK) components

Missing Features
----------------
- General
	- Duplicate class/function names
	- Build Java/task sequencing
	- Preserve state between sessions
- Gui
	- Add External Directories button for Build Arguments dialog.
	- Changing preferences should update drawings
	- For linux, don't getPackage if not in available list.

- Source/project management
	- Add more multitasking: library symbols, loading projects

- Packages
	- BUG: doing File/New on an existing project doesn't delete package config.