@@ -23,16 +23,19 @@
 The following lists releases in reverse chronological order.<br>
 <br>
 
+<h2>2016-1-2</h2>
+  <li>Windows version is now released with LLVM 3.7.1</li>
+
 <h2>2016-1-1</h2>
   <li>New project now adds system includes for analysis using -isystem</li>
   <li>Added editor error highlighting and error text display</li>
   <li>Improved editor debug view variable</li>
   <li>Added search for all project files</li>
   <li>Added editor display of files with different extensions</li>
-  <li>Added scroll bars to draw area for Linux</li>
+  <li>Added scroll bars to draw area for newer versions of GTK</li>
   <li>Allowed viewing sequence diagrams for global functions</li>
-  <li>Fixed class diagram crash on Linux</li>
   <li>Fixed slow load time for loading include dependencies</li>
+  <li>Fixed class diagram crash on Linux</li>
   <li>Fixed oovBuilder crash when project has java files and there are no java arguments</li>
 
 <h2>2015-12-2</h2>
